[tool.poetry]
name = "elearning"
version = "0.1.0"
description = ""
authors = ["Juan Rocha <juan.rocha@nc3.lu>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

homepage = "https://github.com/NC3-LU/eLearning"
repository = "https://github.com/NC3-LU/eLearning"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
psycopg2-binary = "^2.8.4"
cryptography = "^42.0.4"
django-cors-headers = "^3.14.0"
drf-spectacular = "^0.26.1"
drf-spectacular-sidecar = "^2023.4.1"
django-bootstrap5 = "^23.1"
django-formtools = "^2.4"
django-import-export = "^3.2.0"
parler = "^1.0.1"
django-parler = "^2.3"
django-cookiebanner = "^0.2.7"
weasyprint = "^61.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
black = "^22.10.0"
pyupgrade = "^3.2.2"
autoflake = "^1.7.7"
mypy = "^0.991"
types-requests = "^2.28.11.5"
pip-audit = "^2.5.4"
isort = "^5.12.0"
django-debug-toolbar = "^4.0.0"

[tool.poetry.group.docs.dependencies]
sphinx-book-theme = "^1.0.1"
sphinxcontrib-openapi = "^0.8.1"
pydot = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
